--- a/jeecg-boot/jeecg-boot-module/jeecg-module-demo/pom.xml
+++ b/jeecg-boot/jeecg-boot-module/jeecg-module-demo/pom.xml
@@ -16,6 +16,12 @@
             <groupId>org.jeecgframework.boot</groupId>
             <artifactId>jeecg-boot-base-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jeecgframework.boot</groupId>
+            <artifactId>biz-qr</artifactId>
+            <version>3.8.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
